FIX: changed z-index of carousel buttons to 2

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -138,7 +138,7 @@
 
 .carousel-control-next,
 .carousel-control-prev {
-    z-index: 0;
+    z-index: 2;
 }
 
 /* Allauth Forms */
